# tulit-ui

./: .gitignore  Home.py  README.md  config.py  eli_triples.ttl  other.py  pyproject.toml  test.ttl
pages/: 1_Download.py  2_Choose_file.py  3_Parse.py  4_Select_data.py  4_Visualise.py  5_Annotate.py  5_Export.py  6_Link.py  7_Export.py  rdf.py
