[tool.poetry]
name = "tulit-ui"
version = "0.0.1"
description = ""
authors = ["AlessioNar <alessio.nardin@gmail.com>"]
license = "EUPL1.2"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
streamlit = "^1.39.0"
tulit = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
